<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Travel Diary</string>
    <string name="Logo">My Travel Diary</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="LoginButton">Entra</string>
    <string name="RegistratiButton">Registrati</string>
    <string name="nomeUtente">Nome</string>
    <string name="nomeUtenteSugg">Inserisci il tuo nome</string>
    <string name="cognomeUtente">Cognome</string>
    <string name="cognomeUtenteSugg">Inserisci il tuo cognome</string>
    <string name="localitaUtente">Località</string>
    <string name="localitaUtenteSugg">Inserisci la località</string>
    <string name="usernameUtente">Username</string>
    <string name="usernameUtenteSugg">Inserisci l username</string>
    <string name="passwordUtente">Password</string>
    <string name="passwordUtenteSugg">Inserisci la password</string>
    <string name="confermaPasswordUtente">Conferma password</string>
    <string name="confermaPasswordUtenteSugg">Re-inserisci la password</string>
    <string name="SalvaRegistrazioneButton">Registrati</string>
    <string name="Welcome">Benvenuto in</string>
    <string name="NuovoViaggioButton">Nuovo Viaggio</string>
    <string name="RicercaViaggioButton">Ricerca Viaggio</string>
    <string name="InformazioniButton">Informazioni</string>
    <string name="SalvaViaggioButton">Salva</string>
    <string name="InserisciDettagli">Inserisci dettagli</string>
    <string name="Svago">Svago</string>
    <string name="Lavoro">Lavoro</string>
    <string name="localita">Località</string>
    <string name="localitaSugg">Inserisci località</string>
    <string name="dataAndata">Andata</string>
    <string name="dataRitorno">Ritorno</string>
    <string name="compagniViaggio">Compagni di Viaggio</string>
    <string name="compagniViaggioSugg">Inserisci i tuoi compagni di viaggio</string>
    <string name="descrizioneViaggio">Descrizione</string>
    <string name="descrizioneViaggioSugg">Inserisci una descrizione del viaggio</string>
    <string name="inserisciData">Inserisci data</string>
    <string name="cercaSugg">Ricerca viaggio</string>
    <string name="cerca">Cerca</string>
    <string name="risultatiRicerca">Risultati ricerca</string>
    
    <string name="infoApp">My Travel Diary e un applicazione semplice per conservare le esperienze di viaggio che vivi in giro per il mondo con il tuo Android. Scrivi un diario riguardo i tuoi viaggi e arricchisci ogni pagina con foto. Tieni traccia dei luoghi visitati taggandoli sulla mappa. Tagga i tuoi compagni di viaggio per condividere insieme i ricordi. E rivolta a tutte le persone che viaggiano, sia per svago sia per motivi di lavoro, e desiderano tenere il ricordo dei posti visitati sia attraverso una descrizione sia attraverso dei contenuti multimediali. Per quanto riguarda coloro che viaggiano per svago, l applicazione risulta utile poiche l utente potra rivivere ogni attimo e ricordarsi di quello che e andato bene o che e andato male. Invece, per quanto riguarda coloro che viaggiano per motivi di lavoro, l applicazione risulta utile poiche l utente puo tener traccia del motivo per cui ha intrapreso quel viaggio e dare una valutazione ai luoghi in cui e passato, in modo tale da avere, in futuro, una esperienza migliore.</string>
    <string name="FotoButton">Foto</string>
    <string name="TrasportiButton">Trasporti</string>
    <string name="MuseiButton">Musei</string>
    <string name="HotelRistorantiButton">Hotel e Ristoranti</string>
    <string name="Foto">Foto</string>
    <string name="Video">Video</string>
    <string name="salvaButton">Salva</string>
    <string name="InserisciButton">Inserisci</string>
    <string name="compagnia">Compagnia</string>
    <string name="compagniaSugg">Inserisci la compagnia di trasporto</string>
    <string name="cittaPartenza">Città di partenza</string>
    <string name="cittaPartenzaSugg">Inserisci la città di partenza</string>
    <string name="cittaArrivo">Città di arrivo</string>
    <string name="cittaArrivoSugg">Inserisci la città di arrivo</string>
    <string name="valutazione">Valutazione</string>
    <string name="nomeMuseo">Nome</string>
    <string name="nomeMuseoSugg">Inserisci il nome del museo</string>
    <string name="cittaMuseo">Città</string>
    <string name="cittaMuseoSugg">Inserisci la città del museo</string>
    <string name="hotel">Hotel</string>
    <string name="ristorante">Ristorante</string>
    <string name="nomeHotelRistorante">Nome</string>
    <string name="nomeHotelRistoranteSugg">Inserisci il nome del ristorante/hotel</string>
    <string name="cittaHotelRistorante">Città</string>
    <string name="cittaHotelRistoranteSugg">Inserisci la città del ristorante/hotel</string>
    <string name="descrizione">Descrizione</string>
    <string name="localitaIcon">Localita icon</string>
    <string name="dataAndataEsempio">Dal: 12/06/2013</string>
    <string name="dataRitornoEsempio">Al: 24/06/2013</string>
    <string name="compagniViaggiIcon">Compagni viaggio icon</string>
    <string name="mappa">Mappa</string>
    <string name="listCittaMappa">Scegli una città</string>
    <string name="inserisciDettagli">Inserisci dettagli</string>
    <string name="modifica">Modifica viaggio</string>
    <string name="elimina">Elimina viaggio</string>
    <string name="tipoViaggio">Tipologia Viaggio</string>
    <string name="eliminaViaggio">Eliminare viaggio?</string>
    <string name="OK">Elimina</string>
    <string name="annulla">Annulla</string>
    <string name="eliminaInfo">Tutti i dati saranno persi!</string>
    <string name="hello_world">Hello world!</string>
    <string name="noViaggio">Nessun viaggio inserito</string>
    <string name="search_hint">Cerca una località</string>
    <string name="action_new_travel">Nuovo viaggio</string>
    <string name="action_search">Cerca</string>
    <string name="action_info">Info</string>
    <string name="action_filter">Filtra risultati</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_master_travel_message">My Travel Diary</string>
    <string name="title_activity_new_travel_message">Nuovo Viaggio</string>
    <string name="title_activity_search_travel_message">Ricerca Viaggio</string>
    <string name="title_activity_info_message">Informazioni</string>
    <string name="tuttiViaggi">Tutti i viaggi</string>
    <string name="uno">*</string>
    <string name="due">**</string>
    <string name="tre">***</string>
    <string name="quattro">****</string>
    <string name="cinque">*****</string>
    <string name="nuovaLocalita">Nuova località</string>
    <string name="ok">OK</string>
    <string name="visualizzaViaggio">Visualizza viaggio</string>
    <string name="Capture">Cattura</string>
    <string name="action_logout">Esci</string>
    <string name="eliminaLocalitaInfo">La località sarà eliminata</string>
    <string name="eliminaLocalita">Elimina località</string>
    
    <string-array name="dettagli">
        <item>Foto</item>
        <item>Hotel&amp;Ristorante</item>
        <item>Trasporto</item>
        <item>Museo</item>
    </string-array>

    <string-array name="tipoTrasporti">
        <item>Automobile</item>
        <item>Pullman</item>
        <item>Treno</item>
        <item>Aereo</item>
        <item>Nave</item>
    </string-array>
    <string-array name="tipoMusei">
        <item>Storico</item>
        <item>Archeologico</item>
        <item>Arte</item>
        <item>Scientifico</item>
        <item>Marittimo o oceanografico</item>
        <item>Militari o di guerra</item>
    </string-array>

    <string name="title_activity_inserisci_dettagli">Inserisci Dettagli</string>
    <string name="title_activity_foto_video">Inserisci Foto e Video</string>
    <string name="title_activity_trasporti">Inserisci Trasporti</string>
    <string name="title_activity_musei">Inserisci Musei</string>
    <string name="title_activity_hotel_ristoranti">Inserisci Hotel e Ristoranti</string>
    <string name="title_activity_inserisci_hotel_ristoranti">Inserisci Hotel&amp;Ristoranti</string>
    <string name="title_activity_visualizza_viaggio">VisualizzaViaggioActivity</string>
    <string name="title_activity_maps">Mappa</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registrazione">Registrazione</string>
    <string name="title_activity_my_gradient">MyGradient</string>
    <string name="title_activity_searchable">SearchableActivity</string>

    <!-- Address format -->
    <string name="address_output_string">%1$s</string>
    <string name="title_activity_camera">Camera</string>

</resources>