<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.unisa.mytraveldiary.MainActivity" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_new_travel"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_new_travel"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_action_sort_by_size"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/tuttiViaggi"
                android:title="@string/tuttiViaggi"/>
            <item
                android:id="@+id/svago"
                android:checkable="true"
                android:title="@string/Svago"/>
            <item
                android:id="@+id/lavoro"
                android:checkable="true"
                android:title="@string/Lavoro"/>
            <item
                android:id="@+id/uno"
                android:checkable="true"
                android:title="@string/uno"/>
            <item
                android:id="@+id/due"
                android:checkable="true"
                android:title="@string/due"/>
            <item
                android:id="@+id/tre"
                android:checkable="true"
                android:title="@string/tre"/>
            <item
                android:id="@+id/quattro"
                android:checkable="true"
                android:title="@string/quattro"/>
            <item
                android:id="@+id/cinque"
                android:checkable="true"
                android:title="@string/cinque"/>
        </menu>
    </item>

</menu>