<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.unisa.mytraveldiary.FotoVideoActivity" >

    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_action_camera"
        android:title="@string/FotoButton"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_salva"
        android:icon="@drawable/ic_action_save"
        android:title="@string/salvaButton"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_info"
        android:title="@string/action_info"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>

</menu>