<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.unisa.mytraveldiary.VisualizzaViaggioActivity" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_new_travel"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_new_travel"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_info"
        android:title="@string/action_info"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>

</menu>