<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="it.unisa.mytraveldiary.NewTravelMessageActivity$PlaceholderFragment" >

        <Spinner
            android:id="@+id/tipoTrasporti"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20dp"
            android:entries="@array/tipoTrasporti" />

        <TextView
            android:id="@+id/compagnia"
            style="@style/CodeFont"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/tipoTrasporti"
            android:text="@string/compagnia" />

        <EditText
            android:id="@+id/compagniaSugg"
            style="@style/CodeFont"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/compagnia"
            android:layout_marginBottom="20dp"
            android:hint="@string/compagniaSugg" />

        <TextView
            android:id="@+id/cittaPartenza"
            style="@style/CodeFont"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/compagniaSugg"
            android:text="@string/cittaPartenza" />

        <AutoCompleteTextView
            android:id="@+id/cittaPartenzaAutocomplete"
            style="@style/CodeFont"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/cittaPartenza"
            android:layout_marginBottom="20dp"
            android:hint="@string/cittaPartenzaSugg" />

        <TextView
            android:id="@+id/cittaArrivo"
            style="@style/CodeFont"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/cittaPartenzaAutocomplete"
            android:text="@string/cittaArrivo" />

        <AutoCompleteTextView
            android:id="@+id/cittaArrivoAutocomplete"
            style="@style/CodeFont"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/cittaArrivo"
            android:layout_marginBottom="30dp"
            android:hint="@string/cittaArrivoSugg" />

        <TextView
            android:id="@+id/valutazione"
            style="@style/CodeFont"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/cittaArrivoAutocomplete"
            android:gravity="center"
            android:text="@string/valutazione" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/valutazione"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:numStars="5" />

        <Button
            android:id="@+id/salvaTrasportiButton"
            style="@style/CodeFont"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/ratingBar"
            android:layout_marginTop="30dp"
            android:background="@drawable/background"
            android:gravity="center"
            android:onClick="salvaTrasporto"
            android:padding="4dip"
            android:text="@string/salvaButton" />
    </RelativeLayout>

</ScrollView>