<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="it.unisa.mytraveldiary.NewTravelMessageActivity$PlaceholderFragment" >

        <RadioGroup
            android:id="@+id/tipologia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/hotel"
                style="@style/CodeFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="90dp"
                android:text="@string/hotel" />

            <RadioButton
                android:id="@+id/ristorante"
                style="@style/CodeFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ristorante" />
        </RadioGroup>

        <TextView
            android:id="@+id/nomeHotelRistorante"
            style="@style/CodeFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tipologia"
            android:text="@string/nomeHotelRistorante" />

        <EditText
            android:id="@+id/nomeHotelRistoranteInput"
            style="@style/CodeFont"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nomeHotelRistorante"
            android:layout_marginBottom="20dp"
            android:hint="@string/nomeHotelRistoranteSugg" />

        <TextView
            android:id="@+id/cittaHotelRistorante"
            style="@style/CodeFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nomeHotelRistoranteInput"
            android:text="@string/cittaHotelRistorante" />

        <AutoCompleteTextView
            android:id="@+id/cittaHotelRistoranteAutocomplete"
            style="@style/CodeFont"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cittaHotelRistorante"
            android:layout_marginBottom="20dp"
            android:hint="@string/cittaHotelRistoranteSugg"
            android:singleLine="true" />

        <TextView
            android:id="@+id/valutazione"
            style="@style/CodeFont"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/cittaHotelRistoranteAutocomplete"
            android:gravity="center"
            android:text="@string/valutazione" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/valutazione"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:numStars="5" />
    </RelativeLayout>

</ScrollView>