<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.unisa.mytraveldiary.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="30dp"
        android:paddingTop="90dp"
        android:textSize="20pt"
        android:text="@string/Logo" />

    <EditText 
        android:id="@+id/Login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Logo"
        android:hint="@string/Login"
        android:layout_marginBottom="10dp"
        />
    
    <EditText 
        android:id="@+id/Password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
 
    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/Password"
        android:text="@string/LoginButton"
        android:onClick="avanti" />

</RelativeLayout>