<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.unisa.mytraveldiary.MasterTravelMessageActivity$PlaceholderFragment" >

   <TextView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:layout_marginTop="10dp"
        android:textSize="20pt"
        android:text="@string/Logo" />
    
    <Button
        android:id="@+id/NuovoViaggioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Logo"
        android:layout_marginBottom="30dp"
        android:text="@string/NuovoViaggioButton"
        android:onClick="avantiNuovoViaggio" />
    
    <Button
        android:id="@+id/RicercaViaggioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/NuovoViaggioButton"
        android:layout_marginBottom="30dp"       
        android:text="@string/RicercaViaggioButton"
        android:onClick="avantiRicercaViaggio" />
    
    <Button
        android:id="@+id/InformazioniButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/RicercaViaggioButton"
        android:layout_marginBottom="30dp"
        android:text="@string/InformazioniButton"
        android:onClick="avantiInformazioni" />
    

</RelativeLayout>
