<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants" >

    <ImageView
        android:id="@+id/tipoViaggio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tipoViaggio"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/viaggio"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tipoViaggio1" >
    </TextView>

    <ImageButton
        android:id="@+id/inserisciDettagli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_toRightOf="@id/viaggio"
        android:background="@null"
        android:contentDescription="@string/inserisciDettagli"
        android:onClick="inserisciDettagli"
        android:padding="4dip"
        android:src="@drawable/ic_action_new" />

    <ImageButton
        android:id="@+id/modifica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_toRightOf="@id/inserisciDettagli"
        android:background="@null"
        android:contentDescription="@string/modifica"
        android:onClick="tornaHomepage"
        android:padding="4dip"
        android:src="@drawable/ic_action_edit" />

    <ImageButton
        android:id="@+id/elimina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_toRightOf="@id/modifica"
        android:background="@null"
        android:contentDescription="@string/elimina"
        android:padding="4dip"
        android:src="@drawable/ic_action_discard" />

</RelativeLayout>